--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,31 @@
-name: CI
-on: [push, pull_request]
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+
+name: webdriverio-ci
+
+on:
+  push:
+    branches: [ exercicio-modulo26 ]
+  pull_request:
+    branches: [ exercicio-modulo26 ]
+
 jobs:
-  build:
+  test:
+
     runs-on: ubuntu-latest
+
     steps:
         - name: Checkout
-          uses: actions/checkout@v4
-        - uses: actions/setup-node@v3
+          uses: actions/checkout@v2
+        - uses: actions/setup-node@v1
           with:
-            node-version: 20.
+            node-version: 16.3.0
         - name: Install
           run: npm install
         - name: Test
-          run: npm run wdio
+          run:  npm run wdio
         - uses: actions/upload-artifact@v1
+          if: failure()
+          with:
+            name: logs
+            path: logs
